Refactor auth to service/mapper layers, add tests, improve error handling, tighten CORS to frontend origin, extend SQL seed (users/teachers), and update teacher-course mapping to support multiple sessions per teacher